<resources>
    <string name="app_name">GymLog</string>
    <string name="exercise">Exercise\n</string>
    <string name="enter_an_exercise">Enter an Exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a Weight</string>
    <string name="enter_reps">Enter Reps</string>
    <string name="reps">Reps</string>
    <string name="no_logs_available">No logs available</string>
    <string name="login_welcome">Welcome to the GymLog.\nPlease Sign in</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login!</string>
</resources>