<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/LogDisplayTextView"
        android:layout_width="390dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dip"
        android:padding="8dp"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/ExerciseLabelTextView"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/exercise"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogDisplayTextView" />

    <EditText
        android:id="@+id/ExerciseInputEditText"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ExerciseLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/ExerciseLabelTextView"
        android:hint="@string/enter_an_exercise"
        />

    <TextView
        android:id="@+id/WeightLabelTextView"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseLabelTextView" />

    <EditText
        android:id="@+id/WeightInputEditText"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/WeightLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/WeightLabelTextView"
        android:hint="@string/enter_a_weight"
        />

    <TextView
        android:id="@+id/RepLabelTextView"
        android:layout_width="132dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/reps"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WeightLabelTextView" />

    <EditText
        android:id="@+id/RepInputEditText"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/RepLabelTextView"
        app:layout_constraintStart_toEndOf="@+id/RepLabelTextView"
        android:hint="@string/enter_reps"
        />
    
    <Button
        android:id="@+id/LogButton"
        android:layout_width="390dp"
        android:layout_height="205dp"
        android:layout_marginTop="16dp"
        android:text="Log!"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RepLabelTextView" />"

</androidx.constraintlayout.widget.ConstraintLayout>